--- a/wiki/RedisWindowsDownload.wiki
+++ b/wiki/RedisWindowsDownload.wiki
@@ -5,7 +5,7 @@ Download the latest version of the Redis Server for Windows.
 
 Redis is one of the fastest and most feature-rich in-memory key value data stores to come from the NoSQL movement.
 
-From the description of Redis from the [http://code.google.com/p/redis/ Redis project's website]:
+From the description on the [http://code.google.com/p/redis/ Redis project's website]:
   Redis is an advanced key-value store. It is similar to memcached but the dataset is not volatile, and values can be strings, exactly like in memcached, but also lists, sets, and ordered sets. All this data types can be manipulated with atomic operations to push/pop elements, add/remove elements, perform server side union, intersection, difference between sets, and so forth. Redis supports different kind of sorting abilities.
 
 Like most open-source technology Redis was born and is primarily developed on `*`NIX operating systems. If you're looking to install on a `*`NIX platform the best place to download Redis is still from the [http://code.google.com/p/redis/ redis project website].
