--- a/wiki/RedisWindowsDownload.wiki
+++ b/wiki/RedisWindowsDownload.wiki
@@ -17,7 +17,10 @@ Having the latest version of Redis running on windows is important for the devel
 Download latest development release of Redis 1.3.7 (includes Cygwin):
   * [http://servicestack.googlecode.com/files/redis-1.3.7-windows.zip redis-1.3.7-windows.zip]
 
-Download latest stable release of Redis 1.2.5 (includes Cygwin):
+Download latest stable release of Redis 1.2.6 (includes Cygwin):
+  * [http://servicestack.googlecode.com/files/redis-1.2.6-windows.zip redis-1.2.6-windows.zip]
+
+=== Older Releases ===
   * [http://servicestack.googlecode.com/files/redis-1.2.5-windows.zip redis-1.2.5-windows.zip]
 
 = Getting Started =
