--- a/wiki/ServiceStackRedis.wiki
+++ b/wiki/ServiceStackRedis.wiki
@@ -35,6 +35,9 @@ Downloads for Redis Server Windows builds [RedisWindowsDownload can be found her
 
 
 = Examples =
+
+Examples of using [RedisTransactions Redis Transactions are here].
+
 The full source code for the client and the examples is available to [http://code.google.com/p/servicestack/source/browse/#svn/trunk/Common/ServiceStack.Redis view online]
 
 Below is a simple example to give you a flavour of how easy it is to store rich data in Redis:
