--- a/wiki/RedisTransactions.wiki
+++ b/wiki/RedisTransactions.wiki
@@ -82,3 +82,47 @@ public void Can_Pop_priority_message_from_SortedSet_and_Add_to_workq_in_atomic_t
 }
 
 }}}
+
+== All-in-one example ==
+This and other examples can be found by looking at the [http://code.google.com/p/servicestack/source/browse/trunk/Common/ServiceStack.Redis/ServiceStack.Redis.Tests/RedisTransactionTests.cs RedisTransactionTests.cs test suite].
+
+Here is an all in one examples combining many different Redis operations within a single transaction:
+{{{
+
+[Test]
+public void Supports_different_operation_types_in_same_transaction()
+{
+	var incrementResults = new List<int>();
+	var collectionCounts = new List<int>();
+	var containsItem = false;
+
+	Assert.That(Redis.GetString(Key), Is.Null);
+	using (var trans = Redis.CreateTransaction())
+	{
+		trans.QueueCommand(r => r.Increment(Key), intResult => incrementResults.Add(intResult));
+		trans.QueueCommand(r => r.AddToList(ListKey, "listitem1"));
+		trans.QueueCommand(r => r.AddToList(ListKey, "listitem2"));
+		trans.QueueCommand(r => r.AddToSet(SetKey, "setitem"));
+		trans.QueueCommand(r => r.SetContainsValue(SetKey, "setitem"), b => containsItem = b);
+		trans.QueueCommand(r => r.AddToSortedSet(SortedSetKey, "sortedsetitem1"));
+		trans.QueueCommand(r => r.AddToSortedSet(SortedSetKey, "sortedsetitem2"));
+		trans.QueueCommand(r => r.AddToSortedSet(SortedSetKey, "sortedsetitem3"));
+		trans.QueueCommand(r => r.GetListCount(ListKey), intResult => collectionCounts.Add(intResult));
+		trans.QueueCommand(r => r.GetSetCount(SetKey), intResult => collectionCounts.Add(intResult));
+		trans.QueueCommand(r => r.GetSortedSetCount(SortedSetKey), intResult => collectionCounts.Add(intResult));
+		trans.QueueCommand(r => r.Increment(Key), intResult => incrementResults.Add(intResult));
+
+		trans.Commit();
+	}
+
+	Assert.That(containsItem, Is.True);
+	Assert.That(Redis.GetString(Key), Is.EqualTo("2"));
+	Assert.That(incrementResults, Is.EquivalentTo(new List<int> { 1, 2 }));
+	Assert.That(collectionCounts, Is.EquivalentTo(new List<int> { 2, 1, 3 }));
+	Assert.That(Redis.GetAllFromList(ListKey), Is.EquivalentTo(new List<string> { "listitem1", "listitem2" }));
+	Assert.That(Redis.GetAllFromSet(SetKey), Is.EquivalentTo(new List<string> { "setitem" }));
+	Assert.That(Redis.GetAllFromSortedSet(SortedSetKey), Is.EquivalentTo(new List<string> { "sortedsetitem1", "sortedsetitem2", "sortedsetitem3" }));
+}
+
+
+}}}
