Edited wiki page through web user interface.

--- a/wiki/IRedisTransaction.wiki
+++ b/wiki/IRedisTransaction.wiki
@@ -1,4 +1,4 @@
-The IRedisTransaction interface as used by [ServiceStackRedis ServiceStack's C# Redis Client].
+The [RedisTransaction] interface as used by [ServiceStackRedis ServiceStack's C# Redis Client].
 
 = Introduction =
 
