--- a/wiki/RedisTransactions.wiki
+++ b/wiki/RedisTransactions.wiki
@@ -9,7 +9,7 @@ One of the main features of Redis is the ability to construct custom atomic oper
 Creating a transaction is done by calling `IRedisClient.CreateTransaction()`. 
 From there you 'Queue' up all operations you want to be apart of the transaction by using one of the convenient `IRedisTransaction.QueueCommand()` overloads. After that you can choose to execute all the operations by issuing the `IRedisTransaction.Commit()` method which will send the 'EXEC' command to execute all the Queued commands and process their callbacks.
 
-If you don't call the `Commit()` method before the end of the using block, the `Dispose()` method will automatically invoke the `Rollback()` method which will send the 'DISCARD' command disposing of the current transaction and resetting the Redis client connection back to normal.
+If you don't call the `Commit()` method before the end of the using block, the `Dispose()` method will automatically invoke the `Rollback()` method which will send the 'DISCARD' command disposing of the current transaction and resetting the Redis client connection back to its normal state.
 
 == Redis Transaction Examples ==
 
