--- a/wiki/RedisTransactions.wiki
+++ b/wiki/RedisTransactions.wiki
@@ -33,26 +33,25 @@ using (var trans = redis.CreateTransaction())
 The full-source code and other common examples can be found on the [http://code.google.com/p/servicestack/source/browse/trunk/Common/ServiceStack.Redis/ServiceStack.Redis.Tests/RedisTransactionCommonTests.cs common transaction tests page].
 
 {{{
-private const string Key = "multitest";
 
 [Test]
 public void Can_Set_and_Expire_key_in_atomic_transaction()
 {
 	var oneSec = TimeSpan.FromSeconds(1);
 
-	Assert.That(Redis.GetString(Key), Is.Null);
-	using (var trans = Redis.CreateTransaction())			//Calls 'MULTI'
+	Assert.That(Redis.GetString("key"), Is.Null);
+	using (var trans = Redis.CreateTransaction())                  //Calls 'MULTI'
 	{
-		trans.QueueCommand(r => r.SetString(Key, "a"));		//Queues 'SET a'
-		trans.QueueCommand(r => r.ExpireKeyIn(Key, oneSec));	//Queues 'EXPIRESIN a 1'
+		trans.QueueCommand(r => r.SetString("key", "a"));      //Queues 'SET key a'
+		trans.QueueCommand(r => r.ExpireKeyIn("key", oneSec)); //Queues 'EXPIRE key 1'
 
-		trans.Commit();						//Calls 'EXEC'
+		trans.Commit();                                        //Calls 'EXEC'
 
-	}								//Calls 'DISCARD' if 'EXEC' wasn't called
+	}                                                              //Calls 'DISCARD' if 'EXEC' wasn't called
 
-	Assert.That(Redis.GetString(Key), Is.EqualTo("a"));
+	Assert.That(Redis.GetString("key"), Is.EqualTo("a"));
 	Thread.Sleep(TimeSpan.FromSeconds(2));
-	Assert.That(Redis.GetString(Key), Is.Null);
+	Assert.That(Redis.GetString("key"), Is.Null);
 }
 
 [Test]
