--- a/wiki/ServiceStackRedis.wiki
+++ b/wiki/ServiceStackRedis.wiki
@@ -15,7 +15,7 @@ For most cases if you require access to Redis-specific functionality you would w
   * [IRedisTypedClient] - created with `IRedisClient.GetTypedClient<T>()` - it returns a 'strongly-typed client' that provides a typed-interface for all redis value operations that works against any type (e.g. C# POCO objects)
 
 = Thread-safe client managers =
-For multi-threaded applications you can choose from our different client managers:
+For multi-threaded applications you can choose from our different client connection managers:
  * [BasicRedisClientManager] - a load-balance (master-write and read-slaves) client manager that returns a new [IRedisClient] connection with the defaults specified (faster when accessing a redis-server instance on the same host).
 
  * [PooledRedisClientManager] - a load-balanced (master-write and read-slaves) client manager that utilizes a pool of redis client connections (faster when accessing a redis-server instance over the network).
