--- a/wiki/RedisExamples.wiki
+++ b/wiki/RedisExamples.wiki
@@ -85,42 +85,39 @@ public class IntAndString
         public string Letter { get; set; }
 }
 
-
 using (var redisClient = new RedisClient())
 {
-        //Create a typed Redis client that treats all values as IntAndString:
-        var typedRedis = redisClient.GetTypedClient&lt;IntAndString>();
+	//Create a typed Redis client that treats all values as IntAndString:
+	var typedRedis = redisClient.GetTypedClient<IntAndString>();
 
 	var pocoValue = new IntAndString { Id = 1, Letter = "A" };
-        typedRedis.Set("pocoKey", pocoValue);
-        IntAndString toPocoValue = typedRedis.Get("pocoKey");
+	typedRedis.Set("pocoKey", pocoValue);
+	IntAndString toPocoValue = typedRedis.Get("pocoKey");
 
-        Assert.That(toPocoValue.Id, Is.EqualTo(pocoValue.Id));
-        Assert.That(toPocoValue.Letter, Is.EqualTo(pocoValue.Letter));
+	Assert.That(toPocoValue.Id, Is.EqualTo(pocoValue.Id));
+	Assert.That(toPocoValue.Letter, Is.EqualTo(pocoValue.Letter));
 
+	var pocoListValues = new List<IntAndString> { 
+		new IntAndString {Id = 2, Letter = "B"},
+		new IntAndString {Id = 3, Letter = "C"},
+		new IntAndString {Id = 4, Letter = "D"},
+		new IntAndString {Id = 5, Letter = "E"},
+	};
 
-        var pocoListValues = new List&lt;IntAndString> { 
-                new IntAndString {Id = 2, Letter = "B"},
-                new IntAndString {Id = 3, Letter = "C"},
-                new IntAndString {Id = 4, Letter = "D"},
-                new IntAndString {Id = 5, Letter = "E"},
-        };
+	IRedisList<IntAndString> pocoList = typedRedis.Lists["pocoListKey"];
 
+	//Adding all IntAndString objects into the redis list 'pocoListKey'
+	pocoListValues.ForEach(x => pocoList.Add(x));
 
-        IRedisList&lt;IntAndString> pocoList = typedRedis.Lists["pocoListKey"];
+	List<IntAndString> toPocoListValues = pocoList.ToList();
 
-        //Adding all IntAndString objects into the redis list 'pocoListKey'
-        pocoListValues.ForEach(x => pocoList.Add(x));
-
-        List&lt;IntAndString> toPocoListValues = pocoList.ToList();
-
-        for (var i=0; i &lt; pocoListValues.Count; i++)
-        {
-                pocoValue = pocoListValues[i];
-                toPocoValue = toPocoListValues[i];
-                Assert.That(toPocoValue.Id, Is.EqualTo(pocoValue.Id));
-                Assert.That(toPocoValue.Letter, Is.EqualTo(pocoValue.Letter));
-        }
+	for (var i = 0; i < pocoListValues.Count; i++)
+	{
+		pocoValue = pocoListValues[i];
+		toPocoValue = toPocoListValues[i];
+		Assert.That(toPocoValue.Id, Is.EqualTo(pocoValue.Id));
+		Assert.That(toPocoValue.Letter, Is.EqualTo(pocoValue.Letter));
+	}
 }
 
 }}}
