Edited wiki page through web user interface.

--- a/wiki/ServiceStackWebServices.wiki
+++ b/wiki/ServiceStackWebServices.wiki
@@ -39,9 +39,9 @@ What it does give you, is a structured list of all the operations available. Inc
 
 In the end SOAP services are just a HTTP 'POST' to the same endpoint where each payload (usually of the same as the SOAP-Action) is wrapped inside the body of a 'SOAP' envelope. This layer stops a lot of people from accessing the XML payload directly and have to resort to using a SOAP client library just to access the core data.
 
-This complexity is not stopping the Microsoft's and IBM's behind the SOAP specification any-time soon. Nope they're hard at work finishing their latest creations that are adding additional layers on top of SOAP (i.e. WS-Security, WS-Reliability, WS-Transaction, WS-Addressing) which is commonly referred to as the WS-* standards. Interestingly the WS-* stack happens to be complex enough that they are also the only companies that can supply the complying software and tooling to support it, which funnily enough works seamlessly with their expensive servers.
+This complexity is not stopping the Microsoft's and IBM's behind the SOAP specification any-time soon. Nope they're hard at work finishing their latest creations that are adding additional layers on top of SOAP (i.e. WS-Security, WS-Reliability, WS-Transaction, WS-Addressing) which is commonly referred to as the `WS-*` standards. Interestingly the WS-* stack happens to be complex enough that they are also the only companies that can supply the complying software and tooling to support it, which funnily enough works seamlessly with their expensive servers.
 
-It does look as though Microsoft, being the fashionable technology company they are don't have all their eggs in the WS-* bucket. Realizing the current criticisms on their current technology stack, they have explored a range of other web service technologies namely WCF Data Services, WCF RIA Services and now their current favourite OData. The last of which I expect to see all their previous resource efforts in WS-* to be transferred from to promote this new Moniker. OData it seems is a very good 'enabling technology' that is being promoted as 'clickbox driven development' capable (which I'm eagerly awaiting the bumper sticker for :).
+It does look as though Microsoft, being the fashionable technology company they are don't have all their eggs in the WS-* bucket. Realizing the current criticisms on their current technology stack, they have explored a range of other web service technologies namely WCF Data Services, WCF RIA Services and now their current favourite OData. The last of which I expect to see all their previous resource efforts in `WS-*` to be transferred from to promote this new Moniker. OData it seems is a very good 'enabling technology' that is being promoted as 'clickbox driven development' capable (which I'm eagerly awaiting the bumper sticker for :).
 
 === POX to the rescue? ===
 For the pragmatic programmer it's becoming a hard task to follow the published standards and be able to get any work done. For what seems to be a growing trend a lot of developers are 
