--- a/wiki/ServiceStackWebServices.wiki
+++ b/wiki/ServiceStackWebServices.wiki
@@ -51,4 +51,4 @@ For the pragmatic programmer it's becoming a hard task to follow the `WS-*` stac
 One of the major complaints of XML is that it's too verbose, which given a large enough dataset will consume a lot of bandwidth. It is also a lot stricter than a lot of people would like and given the potential for an XML document to be composed of different namespaces and for a type to have both elements and attributes - it is not a perfect fit for most programming models. As a result of this parsing XML can be quite cumbersome especially inside of a browser. A popular format which is seeking to overcome both of these problems and is now the preferred serialization format for AJAX applications is [http://www.json.org JSON]. It is very simple to parse and maps perfectly to a JavaScript object, it is also safe format which is the reason why it's chosen over pure JavaScript. It's also a more 'dynamic' and resilient format than XML meaning that adding new or renaming existing elements or their types will not break the de-serialization routine as there is no formal spec to adhere to which is both and advantage and disadvantage. Unfortunately even though it's a smaller, more simple format it is actually deceptively slower to de/serialize than XML using the available .NET libraries [http://www.servicestack.net/benchmarks/NorthwindDatabaseRowsSerialization.1000000-times.2010-02-06.html based on the available benchmarks]. This performance gap is more likely due to the amount of effort Microsoft has put into their XML DataContractSerializer than a deficiency of the format itself as my effort of developing a [TypeSerializer JSON-like serialization format] is both smaller than JSON and faster than XML - the best of both worlds.
 
 === The new JSV Format ===
-The latest endpoint to be added to Service Stack, is TypeSerializer a JSON inspired format that uses CSV-style escaping. With a desire to create high-performance web services and not happy with the verbosity or performance of the current XML and JSON serialization formats, TypeSerializer was born. The two main goals for TypeSerializer is both speed, and size, in these cases it has succeeded as it is both 5.3x quicker than the leading .NET JSON serializer whilst being 2.6x smaller than XML. Apart from its core goals it has [TypeSerializer many other features] which makes it the best choice for to serialize any .NET POCO object. For this reason it used to store complex POCO types in OrmLite blobs or [ServiceStackRedis POCO objects in Redis].
+The latest endpoint to be added to Service Stack, is TypeSerializer - a JSON inspired format that uses CSV-style escaping. With a desire to create high-performance web services and not happy with the verbosity or performance of the current XML and JSON serialization formats, TypeSerializer was born. The two main goals for TypeSerializer is both speed, and size, in these cases it has succeeded as it is both 5.3x quicker than the leading .NET JSON serializer whilst being 2.6x smaller than XML. Apart from its core goals it has [TypeSerializer many other features] which makes it the best choice for to serialize any .NET POCO object. For this reason it used to store complex POCO types in OrmLite blobs or [ServiceStackRedis POCO objects in Redis].
