Edited wiki page through web user interface.

--- a/wiki/ServiceStackWebServices.wiki
+++ b/wiki/ServiceStackWebServices.wiki
@@ -1,6 +1,13 @@
 #labels WebServices,REST,SOAP,POX,JSON,WCF
 A summary of Service Stack's ethos and general approach on Web Services.
 
+= Available web service endpoints =
+As different endpoints have advantages and disadvantages for different scenarios, Service Stack supports the following endpoints out of the box:
+  * JSON (+ REST GET urls) - More compact than XML and ideal for use in Ajax applications.
+  * XML  (+ REST GET urls) - Faster than JSON. Most standards compliant and interoperable format (Recommended).
+  * JSV  (+ REST GET urls) - Fast, compact serialization format for .NET to .NET web services.
+  * SOAP 1.1/1.2 - WCF SOAP services underneath, useful for corporate Intranet environments that prefer auto-generated client proxies and other tooling support relying on WSDLs.
+
 = Service Stack's view on Web Services =
 
 The W3C defines a "web service" as "a software system designed to support *interoperable* machine-to-machine interaction over a *network*. 
